Fixed symptoms question - all were f so changed it to g-m

--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@ Not different pages
 			<input type="radio"name="q5"value="d"id="q5d"><label for="q5d">Struggle to balance</label><br/>
 			<input type="radio"name="q5"value="e"id="q5e"><label for="q5e">Dizziness</label><br/>
 			<input type="radio"name="q5"value="f"id="q5f"><label for="q5f">Visual problems</label><br/>
-			<input type="radio"name="q5"value="f"id="q5f"><label for="q5f">Fatigue</label><br/>
-			<input type="radio"name="q5"value="f"id="q5f"><label for="q5f">Sensitivity to light or noise</label><br/>
-			<input type="radio"name="q5"value="f"id="q5f"><label for="q5f">Numbness of tingling</label><br/>
-			<input type="radio"name="q5"value="f"id="q5f"><label for="q5f">Difficulty concentrating</label><br/>
-			<input type="radio"name="q5"value="f"id="q5f"><label for="q5f">Difficulty remembering</label><br/>
-			<input type="radio"name="q5"value="f"id="q5f"><label for="q5f">Irritability or depression</label><br/>
-			<input type="radio"name="q5"value="f"id="q5f"><label for="q5f">Drowsy</label><br/>
+			<input type="radio"name="q5"value="g"id="q5g"><label for="q5g">Fatigue</label><br/>
+			<input type="radio"name="q5"value="h"id="q5h"><label for="q5h">Sensitivity to light or noise</label><br/>
+			<input type="radio"name="q5"value="i"id="q5i"><label for="q5i">Numbness of tingling</label><br/>
+			<input type="radio"name="q5"value="j"id="q5j"><label for="q5j">Difficulty concentrating</label><br/>
+			<input type="radio"name="q5"value="k"id="q5k"><label for="q5k">Difficulty remembering</label><br/>
+			<input type="radio"name="q5"value="l"id="q5l"><label for="q5l">Irritability or depression</label><br/>
+			<input type="radio"name="q5"value="m"id="q5m"><label for="q5m">Drowsy</label><br/>
 				<!--Answers to question 5 -->
 			</ul><!--end of question 5 -->	
 			
