Added example results

--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@ Not different pages
 		</div><!-- /header -->
 	
 		<div data-role="content">
-			<p> Based on your answers, you most likely/ do not likely have a concussion (% chance you do).</p>		
+			<p> Based on your answers, your chance of having a concussion is 65%.</p>	
+			<p> You should see your local emergency physician for further analysis. </p>
 			
 
 			
