Redid example for powerpoint

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@ Not different pages
 		</div><!-- /header -->
 	
 		<div data-role="content">
-			<p> Based on your answers, your chance of having a concussion is 65%.</p>	
-			<p> You should see your local emergency physician for further analysis. </p>
+			<p> Based on your answers, your chance of having a concussion is 15%.</p>	
+			<p> Continue resting and wait until all symptoms are gone before completing any physical or mental exertion. If your symptoms worsen, seek emergency medical immediately. </p>
 			
 
 			
