changed radio type to checkbox on check answers

--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@ Not different pages
 			<p class="question">5. Check the following symptoms you are experiencing:</p>
 				<!--/ Question 5 --> 
 			<ul class="answers">
-			<input onclick="cAdd();" type="radio"name="q5"value="a"id="q5a"><label for="q5a">Headache</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="b"id="q5b"><label for="q5b">Nausea</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="c"id="q5c"><label for="q5c">Vomiting</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="d"id="q5d"><label for="q5d">Struggle to balance</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="e"id="q5e"><label for="q5e">Dizziness</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="f"id="q5f"><label for="q5f">Visual problems</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="g"id="q5g"><label for="q5g">Fatigue</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="h"id="q5h"><label for="q5h">Sensitivity to light or noise</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="i"id="q5i"><label for="q5i">Numbness of tingling</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="j"id="q5j"><label for="q5j">Difficulty concentrating</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="k"id="q5k"><label for="q5k">Difficulty remembering</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="l"id="q5l"><label for="q5l">Irritability or depression</label><br/>
-			<input onclick="cAdd();" type="radio"name="q5"value="m"id="q5m"><label for="q5m">Drowsy</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="a"id="q5a"><label for="q5a">Headache</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="b"id="q5b"><label for="q5b">Nausea</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="c"id="q5c"><label for="q5c">Vomiting</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="d"id="q5d"><label for="q5d">Struggle to balance</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="e"id="q5e"><label for="q5e">Dizziness</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="f"id="q5f"><label for="q5f">Visual problems</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="g"id="q5g"><label for="q5g">Fatigue</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="h"id="q5h"><label for="q5h">Sensitivity to light or noise</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="i"id="q5i"><label for="q5i">Numbness of tingling</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="j"id="q5j"><label for="q5j">Difficulty concentrating</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="k"id="q5k"><label for="q5k">Difficulty remembering</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="l"id="q5l"><label for="q5l">Irritability or depression</label><br/>
+			<input onclick="cAdd();" type="checkbox"name="q5"value="m"id="q5m"><label for="q5m">Drowsy</label><br/>
 				<!--Answers to question 5 -->
 			</ul><!--end of question 5 -->	
 			
@@ -210,10 +210,10 @@ Not different pages
 			<p class="question">8. Please attempt the following activities. Check tasks that you experience balance problems or difficulties:</p>
 				<!--/ Question 8 --> 
 			<ul class="answers">
-			<input onclick="cAdd()" type="radio"name="q8"value="a"id="q8a"><label for="q8a">Walk 5 steps forward on you tiptoes and 5 steps backwards on your heels</label><br/>
-			<input onclick="cAdd()" type="radio"name="q8"value="b"id="q8b"><label for="q8b">Stand up and close your eyes</label><br/>
-			<input onclick="cAdd()" type="radio"name="q8"value="c"id="q8c"><label for="q8c">Close your eyes and touch your right finger to your nose</label><br/>
-			<input onclick="cAdd()" type="radio"name="q8"value="d"id="q8d"><label for="q8d">Closer your eyes and touch your left finger to your nose</label><br/>
+			<input onclick="cAdd()" type="checkbox"name="q8"value="a"id="q8a"><label for="q8a">Walk 5 steps forward on you tiptoes and 5 steps backwards on your heels</label><br/>
+			<input onclick="cAdd()" type="checkbox"name="q8"value="b"id="q8b"><label for="q8b">Stand up and close your eyes</label><br/>
+			<input onclick="cAdd()" type="checkbox"name="q8"value="c"id="q8c"><label for="q8c">Close your eyes and touch your right finger to your nose</label><br/>
+			<input onclick="cAdd()" type="checkbox"name="q8"value="d"id="q8d"><label for="q8d">Closer your eyes and touch your left finger to your nose</label><br/>
 				<!--Answers to question 8 -->
 			</ul><!--end of question 8 -->	
 			
