changed results so that it was multiplied by 10

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Not different pages
 	     
 	function result(){
 		var resultText = document.getElementById("result");
-		resultText.innerHTML="Your concussion count is " + count + ".";
+		resultText.innerHTML="Your concussion count is " + (count * 10) + ".";
 	}
 	  
 	 function resetVars(){
