Removed *10 but added an out of 22

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Not different pages
 	     
 	function result(){
 		var resultText = document.getElementById("result");
-		resultText.innerHTML="Your concussion count is " + (count * 10) + ".";
+		resultText.innerHTML="Your concussion count is " + count  + " out of 22.";
 	}
 	  
 	 function resetVars(){
