Removed to page 1 button on page 2

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Not different pages
 		
 		
 		
-			<a href="#pageone" data-role="button">Back to page 1</a>	
+			<!--<a href="#pageone" data-role="button">Back to page 1</a>	
 				<!--created a button to take them back to page 1-->
 			<a href="#pagethree" data-role="button">To page 3</a>	
 				<!--created a button to take them back to page 1-->
