Added this app is for entertainment purposes only

--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@ Not different pages
 	
 		<div data-role="content">	
 		
-			<p>This test will help diagnose whether you have a concussion. Although it does not replace seeing a physician, it can assess signs on brain injury. If you are experiencing or have experienced losing consciousness, inability to awaken, seizures, numbness, or confusion at any point after your injury, call 911 or go to your closest emergency room immediately.</p>
+			<p>This test will help determine whether you have a concussion. Although it does not replace seeing a physician, it can assess signs on brain injury. If you are experiencing or have experienced losing consciousness, inability to awaken, seizures, numbness, or confusion at any point after your injury, call 911 or go to your closest emergency room immediately.</p>
 			<p>Below is the link to the CDC concussion test. If you have taken the test before, log your score and retake the test after injury. After, take the rest of this quiz. If you have not taken the CDC concussion test, leave the pre and post scores blank and continue to take the quiz on this app.</p>
-				<!--/letting the use know what they are about to do -->
+			<p>This app is for entertainment purposes only. Do you use it as a means to diagnose a concussion.</p>	
+			<!--/letting the use know what they are about to do -->
 			<a href="#pagetwo" data-role="button">Start the test</a>	
 				<!--created a button to take them to page 2-->
 		</div><!-- /content -->
