--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Not different pages
 	  
 	<div data-role="page" id="pagethree">
 		<div data-role="header">
-			<h1>Symtpoms</h1>
+			<h1>Symptoms</h1>
 		</div><!-- /header -->
 	
 		<div data-role="content">
