Updated symptom check section
matches our storyboard now

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
  
 Authors in chronological order of contribution:
-Molly Aldred
+Molly Aldred, Prathi Selvapathi
  
 Further Information:
 http://cns.utexas.edu/fri
@@ -83,13 +83,13 @@ Not different pages
 
 	<div data-role="page" id="pagetwo">
 		<div data-role="header">
-			<h1>Injury Characteristics</h1>
+			<h1>Symptom Check</h1>
 		</div><!-- /header -->
 	
 		<div data-role="content">
 					
 			
-			<p class="question">1. Are you/have you been unconscious, confused, unable to wake up, or seizing at any point?</p>
+			<p class="question">1. Are you experiencing a headache or pressure in your head? </p>
 				<!--/ Question 1 --> 
 			<ul class="answers">
 			<input onclick="cAdd();" type="radio"name="q1"value="a"id="q1a"><label for="q1a">Yes</label><br/>
@@ -98,7 +98,7 @@ Not different pages
 			</ul><!--end of question 1 -->
 				
 			
-			<p class="question">2. How did you obtain your head injury?</p>
+			<p class="question">2. Any nausea or vomiting since the incident?</p>
 				<!--/ Question 2 --> 
 			<ul class="answers">
 			<input type="radio"name="q2"value="a"id="q2a"><label for="q2a">Motor Vehicle Crash (MVC)</label><br/>
@@ -110,7 +110,7 @@ Not different pages
 				<!--Answers to question 2 -->
 			</ul><!--end of question 2 -->
 		
-			<p class="question">3. Are there any events just BEFORE the injury that you have no memory of, even briefly?</p>
+			<p class="question">3. do you feel dizzy or have blurred vision?</p>
 				<!--/ Question 5 --> 
 			<ul class="answers">
 			<input onclick="cAdd();" type="radio"name="q3"value="a"id="q3a"><label for="q3a">Yes</label><br/>
@@ -118,7 +118,7 @@ Not different pages
 				<!--Answers to question 3 -->
 			</ul><!--end of question 3 -->
 			
-			<p class="question">4. Are there any events just AFTER the injury that you have no memory of, even briefly?</p>
+			<p class="question">4. Are you bothered by or feel sensitive to noise or light?</p>
 				<!--/ Question 4 --> 
 			<ul class="answers">
 			<input onclick="cAdd();" type="radio"name="q4"value="a"id="q4a"><label for="q4a">Yes</label><br/>
@@ -126,7 +126,13 @@ Not different pages
 				<!--Answers to question 4 -->
 			</ul><!--end of question 4 -->
 		
-		
+			<p class="question">5. Are you just not "feeling right" or "feeling down"?</p>
+				<!--/ Question 5 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q5"value="a"id="q5a"><label for="q5a">Yes</label><br/>
+			<input type="radio"name="q5"value="b"id="q5b"><label for="q5b">No</label><br/>
+				<!--Answers to question 5 -->
+			</ul><!--end of question 5 -->
 		
 			<!--<a href="#pageone" data-role="button">Back to page 1</a>	
 				<!--created a button to take them back to page 1-->
