fixed question 2 to be "yes/no"

--- a/index.html
+++ b/index.html
@@ -101,12 +101,8 @@ Not different pages
 			<p class="question">2. Any nausea or vomiting since the incident?</p>
 				<!--/ Question 2 --> 
 			<ul class="answers">
-			<input type="radio"name="q2"value="a"id="q2a"><label for="q2a">Motor Vehicle Crash (MVC)</label><br/>
-			<input type="radio"name="q2"value="b"id="q2b"><label for="q2b">Pedestrian collision with a motor vehicle</label><br/>
-			<input type="radio"name="q2"value="c"id="q2c"><label for="q2c">Fall</label><br/>
-			<input type="radio"name="q2"value="d"id="q2d"><label for="q2d">Assault</label><br/>
-			<input type="radio"name="q2"value="e"id="q2e"><label for="q2e">Sports</label><br/>
-			<input type="radio"name="q2"value="f"id="q2f"><label for="q2f">Other</label><br/>
+			<input onclick="cAdd();" type="radio"name="q2"value="a"id="q2a"><label for="q2a">Yes</label><br/>
+			<input type="radio"name="q2"value="b"id="q2b"><label for="q2b">No</label><br/>
 				<!--Answers to question 2 -->
 			</ul><!--end of question 2 -->
 		
