--- a/index.html
+++ b/index.html
@@ -129,6 +129,22 @@ Not different pages
 			<input type="radio"name="q5"value="b"id="q5b"><label for="q5b">No</label><br/>
 				<!--Answers to question 5 -->
 			</ul><!--end of question 5 -->
+			
+			<p class="question">6. Are you experiencing numbness or weakness in any area of your body?</p>
+				<!--/ Question 6 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q6"value="a"id="q6a"><label for="q6a">Yes</label><br/>
+			<input type="radio"name="q6"value="b"id="q6b"><label for="q6b">No</label><br/>
+				<!--Answers to question 6 -->
+			</ul><!--end of question 6 -->
+			
+			<p class="question">7. Are you experiencing ringing in your ears?</p>
+				<!--/ Question 7 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q7"value="a"id="q7a"><label for="q7a">Yes</label><br/>
+			<input type="radio"name="q7"value="b"id="q7b"><label for="q7b">No</label><br/>
+				<!--Answers to question 7 -->
+			</ul><!--end of question 7 -->
 		
 			<!--<a href="#pageone" data-role="button">Back to page 1</a>	
 				<!--created a button to take them back to page 1-->
