completed first two questions of "observed symptoms" section

--- a/index.html
+++ b/index.html
@@ -162,37 +162,26 @@ Not different pages
 	  
 	<div data-role="page" id="pagethree">
 		<div data-role="header">
-			<h1>Symptoms</h1>
+			<h1>Observed Symptoms</h1>
 		</div><!-- /header -->
 	
 		<div data-role="content">
 					
-			<p class="question">5. Check the following symptoms you are experiencing:</p>
-				<!--/ Question 5 --> 
+			<p class="question">8. Was there any loss of consciousness (even briefly)?</p>
+				<!--/ Question 8 --> 
 			<ul class="answers">
-			<input onclick="cAdd();" type="checkbox"name="q5"value="a"id="q5a"><label for="q5a">Headache</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="b"id="q5b"><label for="q5b">Nausea</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="c"id="q5c"><label for="q5c">Vomiting</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="d"id="q5d"><label for="q5d">Struggle to balance</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="e"id="q5e"><label for="q5e">Dizziness</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="f"id="q5f"><label for="q5f">Visual problems</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="g"id="q5g"><label for="q5g">Fatigue</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="h"id="q5h"><label for="q5h">Sensitivity to light or noise</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="i"id="q5i"><label for="q5i">Numbness of tingling</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="j"id="q5j"><label for="q5j">Difficulty concentrating</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="k"id="q5k"><label for="q5k">Difficulty remembering</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="l"id="q5l"><label for="q5l">Irritability or depression</label><br/>
-			<input onclick="cAdd();" type="checkbox"name="q5"value="m"id="q5m"><label for="q5m">Drowsy</label><br/>
-				<!--Answers to question 5 -->
-			</ul><!--end of question 5 -->	
+			<input onclick="cAdd();" type="radio"name="q8"value="a"id="q8a"><label for="q8a">Yes</label><br/>
+			<input type="radio"name="q8"value="b"id="q8b"><label for="q8b">No</label><br/>
+				<!--Answers to question 8 -->
+			</ul><!--end of question 8 -->
 			
-			<p class="question">6. Do your symptoms worsen when you have increased mental activity or physical activity?</p>
-				<!--/ Question 6 --> 
+			<p class="question">9. Did the patient have a seizure or convulsions? (Shaking or twitching)</p>
+				<!--/ Question 9 --> 
 			<ul class="answers">
-			<input onclick="cAdd();" type="radio"name="q6"value="a"id="q6a"><label for="q6a">Yes</label><br/>
-			<input type="radio"name="q6"value="b"id="q6b"><label for="q6b">No</label><br/>
-				<!--Answers to question 6 -->
-			</ul><!--end of question 6 -->
+			<input onclick="cAdd();" type="radio"name="q9"value="a"id="q9a"><label for="q9a">Yes</label><br/>
+			<input type="radio"name="q9"value="b"id="q9b"><label for="q9b">No</label><br/>
+				<!--Answers to question 9 -->
+			</ul><!--end of question 9 -->
 			
 			<p class="question">7. Have you had a concussion or a serious head injury before?</p>
 				<!--/ Question 7 --> 
