--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@ Not different pages
 				<!--Answers to question 7 -->
 			</ul><!--end of question 7 -->
 		
+			
 			<!--<a href="#pageone" data-role="button">Back to page 1</a>	
 				<!--created a button to take them back to page 1-->
 			<a href="#pagethree" data-role="button">To page 3</a>	
@@ -183,14 +184,45 @@ Not different pages
 				<!--Answers to question 9 -->
 			</ul><!--end of question 9 -->
 			
-			<p class="question">7. Have you had a concussion or a serious head injury before?</p>
-				<!--/ Question 7 --> 
+			<p class="question">10. Does the patient answer questions slowly?</p>
+				<!--/ Question 10 --> 
 			<ul class="answers">
-			<input onclick="cAdd();" type="radio"name="q7"value="a"id="q7a"><label for="q7a">Yes</label><br/>
-			<input type="radio"name="q7"value="b"id="q7b"><label for="q7b">No</label><br/>
-				<!--Answers to question 7 -->
-			</ul><!--end of question 7 -->
+			<input onclick="cAdd();" type="radio"name="q10"value="a"id="q10a"><label for="q10a">Yes</label><br/>
+			<input type="radio"name="q10"value="b"id="q10b"><label for="q10b">No</label><br/>
+				<!--Answers to question 10 -->
+			</ul><!--end of question 10 -->
 			
+			<p class="question">11. Does the patient have slurred speech or speech difficulty?</p>
+				<!--/ Question 11 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q11"value="a"id="q11a"><label for="q11a">Yes</label><br/>
+			<input type="radio"name="q11"value="b"id="q11b"><label for="q11b">No</label><br/>
+				<!--Answers to question 11 -->
+			</ul><!--end of question 11 -->
+			
+			<p class="question">12. Does the patient appear dazed or stunned?</p>
+				<!--/ Question 12 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q12"value="a"id="q12a"><label for="q12a">Yes</label><br/>
+			<input type="radio"name="q12"value="b"id="q12b"><label for="q12b">No</label><br/>
+				<!--Answers to question 12 -->
+			</ul><!--end of question 12 -->
+			
+			<p class="question">13. Does the patient move clumsily?</p>
+				<!--/ Question 13 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q13"value="a"id="q13a"><label for="q13a">Yes</label><br/>
+			<input type="radio"name="q13"value="b"id="q13b"><label for="q13b">No</label><br/>
+				<!--Answers to question 13 -->
+			</ul><!--end of question 13 -->
+			
+			<p class="question">14. Does the patient show mood, behavior, or personality changes?</p>
+				<!--/ Question 14 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q14"value="a"id="q14a"><label for="q14a">Yes</label><br/>
+			<input type="radio"name="q14"value="b"id="q14b"><label for="q14b">No</label><br/>
+				<!--Answers to question 14 -->
+			</ul><!--end of question 14 -->		
 			
 		
 			<a href="#pagefour" data-role="button">To Page 4</a>	
