added one question in "performative test" section
 must add bullet points below the task

--- a/index.html
+++ b/index.html
@@ -242,20 +242,17 @@ Not different pages
 	  
 	  <div data-role="page" id="pagefour">
 		<div data-role="header">
-			<h1>Neurological Test</h1>
+			<h1>Performative Test Section</h1>
 		</div><!-- /header -->
 	
 		<div data-role="content">
 					
-			<p class="question">8. Please attempt the following activities. Check tasks that you experience balance problems or difficulties:</p>
-				<!--/ Question 8 --> 
+			<p class="question">15. Memory: Read the lists of words of words 3 times slowly and tell the patient to remember these and the order. Check the box if the patient has difficulties completing this tast:</p>
+				<!--/ Question 15 --> 
 			<ul class="answers">
-			<input onclick="cAdd()" type="checkbox"name="q8"value="a"id="q8a"><label for="q8a">Walk 5 steps forward on you tiptoes and 5 steps backwards on your heels</label><br/>
-			<input onclick="cAdd()" type="checkbox"name="q8"value="b"id="q8b"><label for="q8b">Stand up and close your eyes</label><br/>
-			<input onclick="cAdd()" type="checkbox"name="q8"value="c"id="q8c"><label for="q8c">Close your eyes and touch your right finger to your nose</label><br/>
-			<input onclick="cAdd()" type="checkbox"name="q8"value="d"id="q8d"><label for="q8d">Closer your eyes and touch your left finger to your nose</label><br/>
-				<!--Answers to question 8 -->
-			</ul><!--end of question 8 -->	
+			<input onclick="cAdd()" type="checkbox"name="q15"value="a"id="q15a"><label for="q15a">Patient is having difficulty</label><br/>
+				<!--Answers to question 15 -->
+			</ul><!--end of question 15 -->	
 			
 			
 			<a href="#pagefive" data-role="button">To Page 5</a>	
