added bullet points to question 15

--- a/index.html
+++ b/index.html
@@ -250,6 +250,10 @@ Not different pages
 			<p class="question">15. Memory: Read the lists of words of words 3 times slowly and tell the patient to remember these and the order. Check the box if the patient has difficulties completing this tast:</p>
 				<!--/ Question 15 --> 
 			<ul class="answers">
+				<li>Saddle</li>
+  			        <li>Bubbles</li>
+				<li>Cheese</li>
+				<li>Dog</li>
 			<input onclick="cAdd()" type="checkbox"name="q15"value="a"id="q15a"><label for="q15a">Patient is having difficulty</label><br/>
 				<!--Answers to question 15 -->
 			</ul><!--end of question 15 -->	
