--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Not different pages
 	
 		<div data-role="content">
 					
-			<p class="question">15. Memory: Read the lists of words of words 3 times slowly and tell the patient to remember these and the order. Check the box if the patient has difficulties completing this tast:</p>
+			<p class="question">15. Memory: Read the lists of words of words 3 times slowly and tell the patient to remember these and the order. Check the box if the patient has difficulties completing this test:</p>
 				<!--/ Question 15 --> 
 			<ul class="answers">
 				<li>Saddle</li>
@@ -257,6 +257,16 @@ Not different pages
 			<input onclick="cAdd()" type="checkbox"name="q15"value="a"id="q15a"><label for="q15a">Patient is having difficulty</label><br/>
 				<!--Answers to question 15 -->
 			</ul><!--end of question 15 -->	
+			
+			<p class="question">16. Memory: Ask for first and last name and birthday. Check the box if the patient has difficulties completing this test:</p>
+				<!--/ Question 16 --> 
+			<ul class="answers">
+				<li>First Name</li>
+  			        <li>Last Name</li>
+				<li>Birthday</li>
+			<input onclick="cAdd()" type="checkbox"name="q16"value="a"id="q16a"><label for="q16a">Patient is having difficulty</label><br/>
+				<!--Answers to question 16 -->
+			</ul><!--end of question 16 -->	
 			
 			
 			<a href="#pagefive" data-role="button">To Page 5</a>	
