coded question 3 of "performative test" section

--- a/index.html
+++ b/index.html
@@ -268,6 +268,13 @@ Not different pages
 				<!--Answers to question 16 -->
 			</ul><!--end of question 16 -->	
 			
+			<p class="question">17. Balance: Stand with eyes closed. Remain balanced for 10 seconds</p>
+				<!--/ Question 17 --> 
+			<ul class="answers">
+			<input onclick="cAdd()" type="checkbox"name="q17"value="a"id="q17a"><label for="q17a">Patient is having difficulty</label><br/>
+				<!--Answers to question 17 -->
+			</ul><!--end of question 17 -->	
+			
 			
 			<a href="#pagefive" data-role="button">To Page 5</a>	
 				<!--created a button to take them back to page 5-->
