Finished coding "Performative Test" section

--- a/index.html
+++ b/index.html
@@ -275,6 +275,38 @@ Not different pages
 				<!--Answers to question 17 -->
 			</ul><!--end of question 17 -->	
 			
+			<p class="question">18. Balance: Stand on one leg hands on hips. Gain balance then close eyes. Remain balanced for 5 seconds</p>
+				<!--/ Question 18 --> 
+			<ul class="answers">
+			<input onclick="cAdd()" type="checkbox"name="q18"value="a"id="q18a"><label for="q18a">Patient is having difficulty</label><br/>
+				<!--Answers to question 18 -->
+			</ul><!--end of question 18 -->	
+			
+			<p class="question">19. Concentration & Reasoning: Say the months of the year backwards</p>
+				<!--/ Question 19 --> 
+			<ul class="answers">
+			<input onclick="cAdd()" type="checkbox"name="q19"value="a"id="q19a"><label for="q19a">Patient is having difficulty</label><br/>
+				<!--Answers to question 19 -->
+			</ul><!--end of question 19 -->	
+			
+			<p class="question">20. Coordination: lightly toss a small, safe,  object the patient (rubber ball, tennis shoe, crumpled paper) 5 times at a distance of 5 feet instruct them first to catch and then lightly toss back in return</p>
+				<!--/ Question 20 --> 
+			<ul class="answers">
+			<input onclick="cAdd()" type="checkbox"name="q20"value="a"id="q20a"><label for="q20a">Patient is having difficulty</label><br/>
+				<!--Answers to question 20 -->
+			</ul><!--end of question 20 -->	
+			
+			<p class="question">21. Memory: Recite list of words from earlier in order</p>
+				<!--/ Question 21 --> 
+			<ul class="answers">
+				<li>Saddle</li>
+  			        <li>Bubbles</li>
+				<li>Cheese</li>
+				<li>Dog</li>
+			<input onclick="cAdd()" type="checkbox"name="q21"value="a"id="q21a"><label for="q21a">Patient is having difficulty</label><br/>
+				<!--Answers to question 21 -->
+			</ul><!--end of question 21 -->	
+			
 			
 			<a href="#pagefive" data-role="button">To Page 5</a>	
 				<!--created a button to take them back to page 5-->
