added question to performative test section

--- a/index.html
+++ b/index.html
@@ -268,44 +268,51 @@ Not different pages
 				<!--Answers to question 16 -->
 			</ul><!--end of question 16 -->	
 			
-			<p class="question">17. Balance: Stand with eyes closed. Remain balanced for 10 seconds</p>
+			<p class="question">17. Balance: Stand with eyes closed. Remain balanced for 10 seconds. Check the box if the patient has difficulties completing this test:</p>
 				<!--/ Question 17 --> 
 			<ul class="answers">
 			<input onclick="cAdd()" type="checkbox"name="q17"value="a"id="q17a"><label for="q17a">Patient is having difficulty</label><br/>
 				<!--Answers to question 17 -->
 			</ul><!--end of question 17 -->	
 			
-			<p class="question">18. Balance: Stand on one leg hands on hips. Gain balance then close eyes. Remain balanced for 5 seconds</p>
+			<p class="question">18. Balance: Stand on one leg hands on hips. Gain balance then close eyes. Remain balanced for 5 seconds. Check the box if the patient has difficulties completing this test:</p>
 				<!--/ Question 18 --> 
 			<ul class="answers">
 			<input onclick="cAdd()" type="checkbox"name="q18"value="a"id="q18a"><label for="q18a">Patient is having difficulty</label><br/>
 				<!--Answers to question 18 -->
 			</ul><!--end of question 18 -->	
 			
-			<p class="question">19. Concentration & Reasoning: Say the months of the year backwards</p>
+			<p class="question">19. Concentration & Reasoning: Say the months of the year backwards. Check the box if the patient has difficulties completing this test:</p>
 				<!--/ Question 19 --> 
 			<ul class="answers">
 			<input onclick="cAdd()" type="checkbox"name="q19"value="a"id="q19a"><label for="q19a">Patient is having difficulty</label><br/>
 				<!--Answers to question 19 -->
 			</ul><!--end of question 19 -->	
 			
-			<p class="question">20. Coordination: lightly toss a small, safe,  object the patient (rubber ball, tennis shoe, crumpled paper) 5 times at a distance of 5 feet instruct them first to catch and then lightly toss back in return</p>
+			<p class="question">20. Coordination: lightly toss a small, safe,  object the patient (rubber ball, tennis shoe, crumpled paper) 5 times at a distance of 5 feet instruct them first to catch and then lightly toss back in return. Check the box if the patient has difficulties completing this test:</p>
 				<!--/ Question 20 --> 
 			<ul class="answers">
 			<input onclick="cAdd()" type="checkbox"name="q20"value="a"id="q20a"><label for="q20a">Patient is having difficulty</label><br/>
 				<!--Answers to question 20 -->
 			</ul><!--end of question 20 -->	
 			
-			<p class="question">21. Memory: Recite list of words from earlier in order</p>
+			<p class="question">21. Concentration and Reasoning: Count backwards from 100. Check the box if patient is having difficulties completing the test:</p>
 				<!--/ Question 21 --> 
+			<ul class="answers">
+			<input onclick="cAdd()" type="checkbox"name="q21"value="a"id="q21a"><label for="q21a">Patient is having difficulty</label><br/>
+				<!--Answers to question 21 -->
+			</ul><!--end of question 21 -->	
+			
+			<p class="question">22. Memory: Recite list of words from earlier in order. Check the box if the patient has difficulties completing this test:</p>
+				<!--/ Question 22 --> 
 			<ul class="answers">
 				<li>Saddle</li>
   			        <li>Bubbles</li>
 				<li>Cheese</li>
 				<li>Dog</li>
-			<input onclick="cAdd()" type="checkbox"name="q21"value="a"id="q21a"><label for="q21a">Patient is having difficulty</label><br/>
-				<!--Answers to question 21 -->
-			</ul><!--end of question 21 -->	
+			<input onclick="cAdd()" type="checkbox"name="q22"value="a"id="q22a"><label for="q22a">Patient is having difficulty</label><br/>
+				<!--Answers to question 22 -->
+			</ul><!--end of question 22 -->	
 			
 			
 			<a href="#pagefive" data-role="button">To Page 5</a>	
