changed "the" to "this" in question 21

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ Not different pages
 				<!--Answers to question 20 -->
 			</ul><!--end of question 20 -->	
 			
-			<p class="question">21. Concentration and Reasoning: Count backwards from 100. Check the box if patient is having difficulties completing the test:</p>
+			<p class="question">21. Concentration and Reasoning: Count backwards from 100. Check the box if patient is having difficulties completing this test:</p>
 				<!--/ Question 21 --> 
 			<ul class="answers">
 			<input onclick="cAdd()" type="checkbox"name="q21"value="a"id="q21a"><label for="q21a">Patient is having difficulty</label><br/>
