--- a/index.html
+++ b/index.html
@@ -338,17 +338,43 @@ Not different pages
 			<p class="question">23. Do you sleep more than usual? </p>
 				<!--/ Question 23 --> 
 			<ul class="answers">
-			<input onclick="cAdd();" type="radio"name="q1"value="a"id="q1a"><label for="q1a">Yes</label><br/>
-			<input type="radio"name="q1"value="b"id="q1b"><label for="q1b">No</label><br/>
-			<input type="radio"name="q1"value="b"id="q1b"><label for="q1b">Skip</label><br/>
+			<input onclick="cAdd();" type="radio"name="q23"value="a"id="q23a"><label for="q23a">Yes</label><br/>
+			<input type="radio"name="q23"value="b"id="q23b"><label for="q23b">No</label><br/>
+			<input type="radio"name="q23"value="b"id="q23b"><label for="q23b">Skip</label><br/>
 				<!--Answers to question 23 -->
 			</ul><!--end of question 23 -->
 			
-
+			<p class="question">24. Do you sleep less than usual? </p>
+				<!--/ Question 24 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q24"value="a"id="q24a"><label for="q24a">Yes</label><br/>
+			<input type="radio"name="q24"value="b"id="q24b"><label for="q24b">No</label><br/>
+			<input type="radio"name="q24"value="b"id="q24b"><label for="q24b">Skip</label><br/>
+				<!--Answers to question 24 -->
+			</ul><!--end of question 24 -->
 			
+			<p class="question">25. Do you have trouble falling to sleep? </p>
+				<!--/ Question 25 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q25"value="a"id="q25a"><label for="q25a">Yes</label><br/>
+			<input type="radio"name="q25"value="b"id="q25b"><label for="q25b">No</label><br/>
+			<input type="radio"name="q25"value="b"id="q25b"><label for="q25b">Skip</label><br/>
+				<!--Answers to question 25 -->
+			</ul><!--end of question 25 -->
 			
-			<a href="#pageone" onclick="resetVars();" data-role="button">Take Again</a>	
+			<p class="question">26. Do you experience greater difficulty or inability to wake up? </p>
+				<!--/ Question 26 --> 
+			<ul class="answers">
+			<input onclick="cAdd();" type="radio"name="q26"value="a"id="q26a"><label for="q26a">Yes</label><br/>
+			<input type="radio"name="q26"value="b"id="q26b"><label for="q26b">No</label><br/>
+			<input type="radio"name="q26"value="b"id="q26b"><label for="q26b">Skip</label><br/>
+				<!--Answers to question 26 -->
+			</ul><!--end of question 26 -->
+			
+			<a href="#pagesix" data-role="button">To Page 6</a>	
 				<!--created a button to take them back to page 6-->
+			
+			
 		
 		</div><!-- /content -->
 	
