fixed page number function

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@ Not different pages
 			<!--<a href="#pageone" data-role="button">Back to page 1</a>	
 				<!--created a button to take them back to page 1-->
 			<a href="#pagethree" data-role="button">To page 3</a>	
-				<!--created a button to take them back to page 1-->
+				<!--created a button to take to page 3-->
 		</div><!-- /content -->
 	
 		<div data-role="footer" data-position="fixed">
-			<p>Page 3</p>
+			<p>Page 2</p>
 		</div><!-- /footer -->
 		
 	     </div><!--/ end of page 2 -->	
