updated header to observed symptoms section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ Not different pages
 				<li>Best to be evaluated by another person: Ask the questions to the patient and log answers appropriately</li>
 				<li>If answering for yourself, answer truthfully to the best of your ability</li>	
 			<!--/letting the use know what they are about to do -->
+			
 			<a href="#pagetwo" data-role="button">Start the test</a>	
 				<!--created a button to take them to page 2-->
 		</div><!-- /content -->
@@ -166,6 +167,8 @@ Not different pages
 	<div data-role="page" id="pagethree">
 		<div data-role="header">
 			<h1>Observed Symptoms</h1>
+				<li>just for instructor/witness to evaluate</li>
+				<li>if assessing self, answer truthfully to the best of your ability</li>
 		</div><!-- /header -->
 	
 		<div data-role="content">
