updated header to "sleep section"

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ Not different pages
 	<div data-role="page" id="pagethree">
 		<div data-role="header">
 			<h1>Observed Symptoms</h1>
-				<li>just for instructor/witness to evaluate</li>
-				<li>if assessing self, answer truthfully to the best of your ability</li>
+			<li>JUST FOR INSTRUCTOR/WITNESS TO EVALUATE</li>
+			<li>If assessing self, answer truthfully to the best of your ability</li>
 		</div><!-- /header -->
 	
 		<div data-role="content">
@@ -336,6 +336,7 @@ Not different pages
 	    <div data-role="page" id="pagefive">
 		<div data-role="header">
 			<h1>Sleep Section</h1>
+			<li>Only use skip button if it has not been up to 24 hours or gone to sleep</li>
 		</div><!-- /header -->
 	
 		<div data-role="content">
