--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Not different pages
 -->
 
     <head> 
-      <title>App6---HTML5-Canvas</title>  
+      <title>Concussion Diagnostic Test</title>  
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="apple-mobile-web-app-capable" content="yes">
       <link rel="stylesheet" href="w3.css">
